# fruitlang

./: .gitignore  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  README.md  Typechecker.cpp  Typechecker.h  codegen.cpp  codegen.h  file.fruitlang  generate_keyword_parser.py  includes.h  inheritance_graph.py  keywords.inc  main.cpp  test.cpp  token.h  utils.cpp  utils.h
.github/ISSUE_TEMPLATE/: bug_report.md
ast/: Literal.cpp  Literal.h  Type.cpp  Type.h  access.cpp  access.h  ast.cpp  ast.h  ast_Type.cpp  ast_Type.h  ast_if.cpp  ast_if.h  binary_operations.cpp  binary_operations.h  block.cpp  block.h  call.cpp  call.h  callable.cpp  callable.h  definition.cpp  definition.h  expr.cpp  expr.h  module.cpp  module.h  unary_operations.cpp  unary_operations.h
